--- a/design.html
+++ b/design.html
@@ -51,7 +51,7 @@
 						<a class="me-3 link-light text-decoration-none" href="#"
 							>FI/EN</a
 						>
-						<a class="me-3 link-light text-decoration-none" href="/index.html"
+						<a class="me-3 link-light text-decoration-none" href="/"
 							>MUATOY</a
 						>
 						<a class="me-3 link-light text-decoration-none" href="/design.html"
