--- a/kontakti.html
+++ b/kontakti.html
@@ -53,7 +53,7 @@
 						>
 						<a
 							class="me-3 link-light text-decoration-none"
-							href="/index.html"
+							href="/"
 							>MUATOY</a
 						>
 						<a
