--- a/design.html
+++ b/design.html
@@ -51,15 +51,15 @@
 						<a class="me-3 link-light text-decoration-none" href="#"
 							>FI/EN</a
 						>
-						<a class="me-3 link-light text-decoration-none" href="/"
+						<a class="me-3 link-light text-decoration-none" href="index.html"
 							>MUATOY</a
 						>
-						<a class="me-3 link-light text-decoration-none" href="/design.html"
+						<a class="me-3 link-light text-decoration-none" href="design.html"
 							>DESIGN</a
 						>
 						<a
 							class="me-3 emp link-light text-decoration-none"
-							href="/kontakti.html"
+							href="kontakti.html"
 							>KONTAKTI</a
 						>
 					</nav>
