--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<a class="me-3 link-light text-decoration-none" href="#"
 							>FI/EN</a
 						>
-						<a class="me-3 link-light text-decoration-none" href="/"
+						<a class="me-3 link-light text-decoration-none" href="index.html"
 							>MUATOY</a
 						>
 						<a class="me-3 link-light text-decoration-none" href="design.html"
@@ -59,7 +59,7 @@
 						>
 						<a
 							class="me-3 emp link-light text-decoration-none"
-							href="/kontakti.html"
+							href="kontakti.html"
 							>KONTAKTI</a
 						>
 					</nav>
