--- a/design.html
+++ b/design.html
@@ -66,7 +66,7 @@
 				</div>
 
 				<div class="logo-header text-center">
-					<img src="/media/Logo.png" alt="Logo" />
+					<img src="media/Logo.png" alt="Logo" />
 				</div>
 			</header>
 
@@ -84,7 +84,7 @@
 						</p>
 						<div class="d-flex justify-content-center">
 							<a href="https://www.instagram.com/muatoycreative/"
-								><img src="/media/instagram.png" alt=""
+								><img src="media/instagram.png" alt=""
 							/></a>
 						</div>
 					</div>
