--- a/design.html
+++ b/design.html
@@ -66,7 +66,7 @@
 				</div>
 
 				<div class="logo-header text-center">
-					<img src="media/Logo.png" alt="Logo" />
+					<img src="./media/Logo.png" alt="Logo" />
 				</div>
 			</header>
 
