--- a/kontakti.html
+++ b/kontakti.html
@@ -66,7 +66,7 @@
 				</div>
 
 				<div class="logo-header text-center">
-					<img src="/media/Logo.png" alt="Logo" />
+					<img src="./media/Logo.png" alt="Logo" />
 				</div>
 			</header>
 
@@ -84,19 +84,19 @@
 						</p>
 						<div class="d-flex justify-content-center">
 							<a class="px-3" href="https://www.linkedin.com/in/jukkasurakka/"
-								><img src="media/linkedIn.png" alt=""
+								><img src="./media/linkedIn.png" alt=""
 							/></a>
 							<a class="px-3" href="https://www.instagram.com/muatoycreative/"
-								><img src="media/instagramSmall.png" alt=""
+								><img src="./media/instagramSmall.png" alt=""
 							/></a>
 							<a class="px-3" href="https://www.facebook.com/Jukka.M.Surakka/"
-								><img src="media/facebook.png" alt=""
+								><img src="./media/facebook.png" alt=""
 							/></a>
 							<a class="px-3" href="https://twitter.com/muatoycreative"
-								><img src="media/twitter.png" alt=""
+								><img src="./media/twitter.png" alt=""
 							/></a>
 							<a class="px-3" href="mailto:contact@muatoy.com"
-								><img src="media/email.png" alt=""
+								><img src="./media/email.png" alt=""
 							/></a>
 						</div>
 					</div>
