--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 							Design ratkaisut äänestä inspiroituneena
 						</p>
 						<div class="d-flex justify-content-center">
-							<a class="link-light text-decoration-none" href="design.html"><div class="action-button">Design</div></a>
-							<a class="link-light text-decoration-none" href="kontakti.html"><div class="action-button">Kontakti</div></a>
+							<a class="link-light text-decoration-none" href="./design.html"><div class="action-button">Design</div></a>
+							<a class="link-light text-decoration-none" href="./kontakti.html"><div class="action-button">Kontakti</div></a>
 						</div>
 					</div>
 				</div>
