--- a/index.html
+++ b/index.html
@@ -36,55 +36,72 @@
 		<div class="container-fluid py-3">
 			<header>
 				<div
-					class="d-flex sticky-top flex-column flex-md-row align-items-center"
+					class="d-flex flex-column flex-md-row align-items-center"
 				>
-					<a
-						href="/"
-						class="d-flex align-items-center text-decoration-none"
-					>
-						<span class="header-text"
-							><strong>MUATOY</strong> CREATIVE</span
-						>
-					</a>
-
-					<nav class="d-inline-flex mt-md-3 ms-md-auto">
+<!-- 					<nav class="d-inline-flex mt-md-3 ms-md-auto">
 						<a class="me-3 link-light text-decoration-none" href="#"
-							>FI/EN</a
-						>
-						<a class="me-3 link-light text-decoration-none" href="index.html"
-							>MUATOY</a
-						>
-						<a class="me-3 link-light text-decoration-none" href="design.html"
-							>DESIGN</a
-						>
-						<a
-							class="me-3 emp link-light text-decoration-none"
-							href="kontakti.html"
-							>KONTAKTI</a
-						>
-					</nav>
+							><div class="selected">FI</div>/EN</a>
+					</nav> -->
 				</div>
 
-				<div class="logo-header text-center">
-					<img src="./media/Logo.png" alt="Logo" />
+				<div class="logo-header text-center p-5">
+					<img class="img-fluid" src="./media/logo.png" alt="MUATOY CREATIVE" />
 				</div>
 			</header>
 
-			<main class="main-content container-sm">
-				<div class="p-1 mb-4 rounded-3">
-					<div class="container-fluid py-5 text-center">
-						<h1 class="header">Muatoy</h1>
-						<div class="subtitle text-center">
-							Design for senses
-						</div>
-						<p class="py-5">
-							Design ratkaisut äänestä inspiroituneena
-						</p>
-						<div class="d-flex justify-content-center">
-							<a class="link-light text-decoration-none" href="./design.html"><div class="action-button">Design</div></a>
-							<a class="link-light text-decoration-none" href="./kontakti.html"><div class="action-button">Kontakti</div></a>
+			<main class="main-content container-sm py-5">
+				<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+					<div class="col px-4">
+						<div class="box-1">
+							<h2 class="mt-4 mx-4">MUOTOJA AISTEILLE</h2>
+							<p class="p-2">
+								Design ratkaisut ammattitaidolla äänestä
+								inspiroituneena. Ratkaisuissa yhdistyy geometria
+								ja orgaaninen muotokieli.
+							</p>
 						</div>
 					</div>
+					<div class="col px-4">
+						<div class="box-2">
+							<h2 class="mt-4 mx-4">DESIGN PALVELUT</h2>
+							<p class="p-2">
+								Teollinen muotoilu<br>
+								Tuotesuunnittelu<br>
+								Konseptisuunnittelu<br>
+								3D mallinnus<br>
+								3D printtaus<br>
+							</p>
+						</div>
+					</div>
+					<div class="col px-4">
+						<div class="box-3">
+							<h2 class="mt-4 mx-4">KONTAKTI</h2>
+							<p class="p-2">
+								Jukka Surakka<br>
+								Teollinen Muotoilija
+								<br>
+								<br>
+								<a class="text-reset" href="mailto:contact@muatoycreative.com">contact @ muatoycreative.com</a>
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="links text-center p-5">
+					<a class="px-3" href="https://www.linkedin.com/in/jukkasurakka/">
+						<img src="./media/linkedIn.png" alt="MUATOY linkedIn">
+					</a>
+					<a class="px-3" href="http://">
+						<img src="./media/facebook.png" alt="MUATOY facebook">
+					</a>
+					<a class="px-3" href="http://">
+						<img src="./media/instagramSmall.png" alt="MUATOY instagram">
+					</a>
+					<a class="px-3" href="http://">
+						<img src="./media/twitter.png" alt="MUATOY twitter">
+					</a>
+					<a class="px-3" href="http://">
+						<img src="./media/email.png" alt="MUATOY email">
+					</a>
 				</div>
 			</main>
 
