--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 					</nav> -->
 				</div>
 
-				<div class="logo-header text-center p-5">
-					<img class="img-fluid" src="./media/logo.png" alt="MUATOY CREATIVE" />
+				<div class="text-center p-5">
+					<img class="logo-img img-fluid" src="./media/logo.png" alt="MUATOY CREATIVE" />
 				</div>
 			</header>
 
@@ -88,19 +88,19 @@
 				</div>
 				<div class="links text-center p-5">
 					<a class="px-3" href="https://www.linkedin.com/in/jukkasurakka/">
-						<img src="./media/linkedIn.png" alt="MUATOY linkedIn">
+						<img class="social-media" src="./media/linkedIn.png" alt="MUATOY linkedIn">
 					</a>
 					<a class="px-3" href="http://">
-						<img src="./media/facebook.png" alt="MUATOY facebook">
+						<img class="social-media" src="./media/facebook.png" alt="MUATOY facebook">
 					</a>
 					<a class="px-3" href="http://">
-						<img src="./media/instagramSmall.png" alt="MUATOY instagram">
+						<img class="social-media" src="./media/instagramSmall.png" alt="MUATOY instagram">
 					</a>
 					<a class="px-3" href="http://">
-						<img src="./media/twitter.png" alt="MUATOY twitter">
+						<img class="social-media" src="./media/twitter.png" alt="MUATOY twitter">
 					</a>
 					<a class="px-3" href="http://">
-						<img src="./media/email.png" alt="MUATOY email">
+						<img class="social-media" src="./media/email.png" alt="MUATOY email">
 					</a>
 				</div>
 			</main>
