--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 						<img class="social-media" src="./media/facebook.png" alt="MUATOY facebook">
 					</a>
 					<a class="px-3" href="http://">
-						<img class="social-media" src="./media/instagramSmall.png" alt="MUATOY instagram">
+						<img class="social-media" src="./media/instagram.png" alt="MUATOY instagram">
 					</a>
 					<a class="px-3" href="http://">
 						<img class="social-media" src="./media/twitter.png" alt="MUATOY twitter">
